# ubb-bd-project

./: .gitignore  Dockerfile.spark  README.md  docker-compose.yml  pyproject.toml  submit_hadoop.sh
docker-hadoop/: Makefile  docker-compose-v3.yml  docker-compose.yml  hadoop.env
docker-hadoop/base/: Dockerfile
docker-hadoop/base_with_tez/: Dockerfile
docker-hadoop/datanode/: Dockerfile
docker-hadoop/historyserver/: Dockerfile
docker-hadoop/hiveserver/: Dockerfile  hive-env.sh  run.sh
docker-hadoop/namenode/: Dockerfile
docker-hadoop/nodemanager/: Dockerfile
docker-hadoop/resourcemanager/: Dockerfile
hadoop/: mapper.py  reducer.py
project/: app.py  importer.py  kafka_consumer.py  kafka_hadoop.py
project/hadoop/: __init__.py  mapper.py  reducer.py
scripts/: ingest_hadoop.sh  process_hadoop.sh  setup_hive.sh
