[tool.poetry]
name = "project"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.23.0"
pyspark = "^3.3.1"
pykafka = "^2.8.0"
pandas = "^1.5.1"
pyarrow = "^10.0.0"


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
pylint = "^2.15.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
